# stock_market_analysis

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO  mkdocs.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: cicd.yml
docs/: dev_commands.md  getting_started.md  index.md  reference.md
stock_market_analysis/: cli.py  main.py
stock_market_analysis/cli/: cli.py  new_cli.py  old_cli.py
stock_market_analysis/data/: all_uk_indexed.csv  all_uk_stocks.csv  ftse.csv  ftse_100.csv  ftse_20_biggest.csv  ftse_250.csv
stock_market_analysis/src/: logger.py  stock_data_fetcher.py  utils.py
stock_market_analysis/src/analysis/: base_analysis.py  filtering.py  sorting.py
stock_market_analysis/src/backtest/: backtest_entities.py  backtest_service.py
stock_market_analysis/src/data_providers/: base_provider.py  yahoo_data.py
stock_market_analysis/src/indicators/: technical_indicators.py
stock_market_analysis/src/output/: base_output.py  csv_output.py  plot_output.py
stock_market_analysis/src/services/: base_service.py  bb_rsi_service.py  bb_service.py  four_ps_service.py  macd_analysis.py  macd_rsi_service.py  macd_service.py  rsi_analysis.py  rsi_service.py  sup_res_service.py  ten_days_service.py  trend_based_service.py
stock_market_analysis/src/strategies/: base.py  bb.py  four_ps.py  ma.py  macd.py  main.py  rsi.py  sup_res.py  ten_days.py
stock_market_analysis/src/utils/: utils.py
stock_market_analysis/steps/: dividendCaptureAnalysis.py  fetchData.py  historyDividendAnalysis.py  topPerformers.py  trendAnalysis.py
tests/: __init__.py  fetch_data_test.py  rsi_analysis_test.py  stock_data_fetcher_test.py  stock_market_analysis_test.py
